[package]
name = "dungeon-roll"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.22", features = ["event-stream"] }
dice_derive = { path = "dice_derive" }
futures = "0.3"
lazy_static = "1.4"
rand = "0.8"
rand_pcg = "0.3"
tokio = { version = "1", features = ["full"] }
tui = { version = "0.16", default-features = false, features = ["crossterm"] }
